# opencv-ocr-transforms-demo

./: CMakeLists.txt  readme.md
src/: config.hpp.in  main.cpp
